# rust-gl

./: .gitignore  .swcrc  Cargo.toml  LICENSE  README.md  image.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
frontend/: app.css  app.ts  bootstrap.js  index.ts  utils.ts
src/: attribs.rs  buffers.rs  gl.rs  gl_program.rs  lib.rs  shaders.rs  square.rs
src/animation/: another_anim.rs  mod.rs  slide.rs
src/core/: application.rs
src/display/: attribs.rs  buffers.rs  display_object.rs  mod.rs  shader_program.rs  square.rs
src/graphics/: container.rs  geom.rs  mod.rs  quad.rs  renderable.rs  scene_graph.rs  shape.rs  square.rs  transformable.rs  triangle.rs
src/graphics/geom/: circle.rs  ellipse.rs  geom.rs  mod.rs  polygon.rs  quad.rs  triangle.rs
src/graphics/shape/: mod.rs  quad.rs  triangle.rs
src/graphics/shapes/: circle.rs  ellipse.rs  mod.rs  polygon.rs  quad.rs  shape.rs  shape_enum.rs  triangle.rs  utils.rs
src/math/: bounding_rect.rs  bounds.rs  ipoint.rs  matrix.rs  mod.rs  transform.rs
src/math/shapes/: circle.rs  ellipse.rs  mod.rs  rectangle.rs
src/shaders/: mod.rs  shader_consts.rs  shader_utils.rs  shape_shader.rs  square_shader.rs
src/textures/: ab_text.rs  load_texture.rs  mod.rs  solid_texture.rs  texture_img.rs  texture_text.rs  typer_text.rs  utils.rs
src/utils/: gl_utils.rs  mod.rs  utils.rs  wasm_utils.rs
