[package]
name = "rust-gl"
version = "0.1.0"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
dyn-clonable = "0.9.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.55"
webgl2-glyph-atlas = { path="webgl2-glyph-atlas/" }
rusttype = "0.9.2"
image = "0.23.14"
ab_glyph = "0.2.12"
typer = "0.1.1"
xml-rs = "0.8"
keyframe = "1.0.4"
[dependencies.web-sys]
version = "0.3.55"
default-features = false
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "TextMetrics",
  "WebGlBuffer",
  "WebGlUniformLocation",
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
